--- a/apps/test-dashboard/overlays/production/kustomization.yaml
+++ b/apps/test-dashboard/overlays/production/kustomization.yaml
@@ -11,3 +11,7 @@ commonLabels:
 
 patches:
   - path: deployment-patch.yaml
+
+images:
+  - name: gitlab-registry.gitlab-system.svc.cluster.local:5000/daitics-com/test-dashboard
+    newTag: "latest"
