--- a/apps/test-dashboard/overlays/development/kustomization.yaml
+++ b/apps/test-dashboard/overlays/development/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+# Sync test: 2026-01-16T20:00:00Z
 
 namespace: daitics-development
 
